<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/searchBar"
            android:padding="16dp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSearch"
            android:padding="16dp"
            android:text="@string/searchButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zoomIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="zoomFunc"
            android:text="@string/zoomIn" />

        <Button
            android:id="@+id/zoomOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="zoomFunc"
            android:text="@string/zoomOut" />

        <Button
            android:id="@+id/changeView"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:onClick="changeView"
            android:text="@string/satellite" />

        <Button
            android:id="@+id/changeTerrain"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:onClick="changeView"
            android:text="@string/terrain" />

    </LinearLayout>

<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ga.vihanggarud.www.gmapbasic.MapsActivity" />

</LinearLayout>
